--- a/WindowsRed/Views/LinksPage.xaml
+++ b/WindowsRed/Views/LinksPage.xaml
@@ -9,15 +9,13 @@
 
     <Grid x:Name="mainGrid" Background="#2c2c2c">
         <Border Background="#4093ce" Height="30" VerticalAlignment="Top">
-            <TextBlock Text="reddit" FontSize="60" Margin="0,-20,0,0" />
+            <TextBlock x:Name="Title" FontSize="60" Margin="0,-20,0,0" />
         </Border>
         <ListView x:Name="mainList"
-                  ItemsSource="{Binding}"
                   Margin="0,30,0,0"
-                  SelectionMode="Single"
-                  IncrementalLoadingTrigger="Edge"
-                  DataFetchSize="2"
-                  IncrementalLoadingThreshold="0">
+                  SelectionMode="None"
+                  IsItemClickEnabled="True"
+                  ItemClick="MainListItemClick">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -29,67 +27,7 @@
 
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid x:Name="postGrid">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="50" />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <Border Grid.Column="0" Grid.Row="0" Background="#e8e8e8" BorderBrush="#cecece" BorderThickness="0,0,2,2">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="50" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="50" />
-                                </Grid.ColumnDefinitions>
-
-                                <Image x:Name="up" Source="" Grid.Column="0" />
-                                <TextBlock x:Name="karma" Text="{Binding Score}" Grid.Column="1" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#8b8b8b" />
-                                <Image x:Name="down" Source="" Grid.Column="2" />
-                            </Grid>
-                        </Border>
-                        <Border Grid.Column="1" Grid.Row="0" Background="#e8e8e8" BorderBrush="#cecece" BorderThickness="0,0,0,2" Padding="20,0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-
-                                <Image Source="{Binding Thumbnail}" VerticalAlignment="Center" Grid.Column="0" />
-                                <TextBlock x:Name="title" Text="{Binding Title}" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Left" TextTrimming="WordEllipsis" Foreground="#000" Grid.Column="1" />
-                            </Grid>
-                        </Border>
-                        <Border Grid.Column="2" Grid.Row="0" Background="#e8e8e8" BorderBrush="#cecece" BorderThickness="0,0,0,2">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-
-                                <TextBlock Text="r/" Grid.Column="0" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="#8b8b8b" />
-                                <TextBlock x:Name="subredditName" Grid.Column="1" Text="{Binding Subreddit}" FontSize="18" VerticalAlignment="Center" Foreground="#000" />
-                            </Grid>
-                        </Border>
-                        <Border Grid.Column="3" Grid.Row="0" Background="#e8e8e8" BorderBrush="#cecece" BorderThickness="0,0,0,2">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
-
-                                <Image x:Name="Comment" Source="" Grid.Row="0" />
-                                <TextBlock x:Name="numberOfComments" Grid.Row="1" Foreground="#000" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding NumComments}" />
-                            </Grid>
-                        </Border>
-
-                        <Border x:Name="preview" Grid.Row="1" Grid.ColumnSpan="4" />
-                    </Grid>
+                    <local:LinkControl Link="{Binding}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
