Go back from LinkPage.
Support for going back (it is in the app bar).
Cache the LinksPage so when going back from LinkPage the links are not
reloaded.

--- a/WindowsRed/Views/LinkPage.xaml
+++ b/WindowsRed/Views/LinkPage.xaml
@@ -25,4 +25,14 @@
             <Grid x:Name="comments" Grid.Row="1" />
         </Grid>
     </Grid>
+
+    <Page.BottomAppBar>
+        <AppBar x:Name="appBar" Padding="10,0">
+            <Grid>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <Button Style="{StaticResource BackButtonStyle}" Click="BackClick" AutomationProperties.Name="Back"/>
+                </StackPanel>
+            </Grid>
+        </AppBar>
+    </Page.BottomAppBar>
 </Page>
